# pyleague

./: .gitignore  main.py  pyproject.toml
files/: groups_per_day.json
pyleague/: day_pointer.py  groups_per_day.py  main.py  participants.py
tests/: test_pyleague.py
