[tool.poetry]
name = "pyleague"
version = "0.1.0"
description = ""
authors = ["mf-andres <amunoz@gradiant.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyleague = 'pyleague.entrypoint.main:app'
